--- a/cart.html
+++ b/cart.html
@@ -570,7 +570,7 @@ contentDiv.append(h5,button)
 
     // now, we also have to update the arr of obj in local stroge
     // and also without updating,it also didn't delete from browser also
-    localStorage.setItem("userCart", JSON.stringify(cartData));
+    localStorage.setItem("omeshshop", JSON.stringify(cartData));
 
     // to also delete from browser, by automaticlly reload and then it will fetch new updated data
     window.location.reload();
