--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
             <img id="Search-logo" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="searchBar1">
 
-            <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
+            <img class="leftIcons" id="location_aman" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
             <img id="BagImage" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/1656/1656850.png"
                 alt="bag">
-            <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
+            <img class="leftIcons" id="profile_aman" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
         </div>
         <!-- </div> -->
     </nav>
@@ -593,7 +593,7 @@
                         <li>Age Defense</li>
                     </a>
                 </ul>
-                <a href="#">
+                <a href="shopAll.html">
                     <li>SHOP ALL PRODUCTS</li>
                     <i id="three" class="fa-solid fa-plus"></i>
                 </a>
