--- a/cart.html
+++ b/cart.html
@@ -156,9 +156,9 @@
   
         <img id="Search-logo" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="searchBar1">
   
-        <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
+        <img class="leftIcons" id="location_aman" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
         <img id="BagImage" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/1656/1656850.png" alt="bag">
-        <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
+        <img class="leftIcons" id="profile_aman" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
       </div>
       <!-- </div> -->
     </nav>
@@ -217,7 +217,7 @@
                 <li>Age Defense</li>
               </a>
             </ul>
-            <a href="#">
+            <a href="shopAll.html">
               <li>SHOP ALL PRODUCTS</li>
               <i id="three" class="fa-solid fa-plus"></i>
             </a>
@@ -576,6 +576,19 @@ contentDiv.append(h5,button)
     window.location.reload();
   }
 ////////////////////////////////////////////////////////////////////////////////////////
+
+document.querySelector('#logo').addEventListener("click",function(){
+  window.location.href="index.html";
+})
+
+document.querySelector('#location_aman').addEventListener("click",function(){
+  window.location.href="location.html";
+})
+
+document.querySelector('#profile_aman').addEventListener("click",function(){
+  window.location.href="signin.html";
+})
+
 
 
 </script>
