--- a/shopAll.html
+++ b/shopAll.html
@@ -32,9 +32,9 @@
       <img id="Search-logo" src="https://cdn-icons-png.flaticon.com/512/54/54481.png"
        alt="searchBar1">
        
-       <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
+       <img class="leftIcons" id="location_aman" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
        <img id="BagImage" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/1656/1656850.png" alt="bag">
-       <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
+       <img class="leftIcons" id="profile_aman" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
       </div>  
   </div>
   </nav>
@@ -464,7 +464,7 @@ function submenu(){
 
     // bag redirect
     document.querySelector("#BagImage").addEventListener("click",function(){
-        window.location.href = "cart.hmtl"
+        window.location.href = "cart.html"
     })
 
 
@@ -735,3 +735,21 @@ function submenu(){
     </script>
 </body>
 </html>
+
+
+<script>
+
+  
+document.querySelector('#logo').addEventListener("click",function(){
+  window.location.href="index.html";
+})
+
+document.querySelector('#location_aman').addEventListener("click",function(){
+  window.location.href="location.html";
+})
+
+document.querySelector('#profile_aman').addEventListener("click",function(){
+  window.location.href="signin.html";
+})
+
+</script>
