--- a/signup.html
+++ b/signup.html
@@ -33,9 +33,9 @@
   
         <img id="Search-logo" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="searchBar1">
   
-        <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
+        <img class="leftIcons" id="location_aman" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
         <img id="BagImage" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/1656/1656850.png" alt="bag">
-        <img class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
+        <img class="leftIcons" id="profile_aman" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
       </div>
       <!-- </div> -->
     </nav>
