Finally done guys

--- a/index.html
+++ b/index.html
@@ -33,44 +33,44 @@
 
             <img id="Search-logo" src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="searchBar1">
 
-            <img class="leftIcons" id="location_aman" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
+            <img id="location_aman" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/3313/3313835.png" alt="location">
             <img id="BagImage" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/1656/1656850.png"
                 alt="bag">
-            <img class="leftIcons" id="profile_aman" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
+            <img id="profile_aman" class="leftIcons" src="https://cdn-icons-png.flaticon.com/512/709/709579.png" alt="profile">
         </div>
         <!-- </div> -->
     </nav>
     <!-- </div> -->
 
     <div id="master-body">
-        <div class="sale">
+        <div class="sale" onclick="shopAll()">
             <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Group_423_d41a2573-1e24-4d91-93de-639f8a62bfc0.png?v=1655367664"
                 alt="Sale-img">
         </div>
         <!-- catageory-start -->
         <div class="catageory-container">
-            <div class="cata-box">
+            <div class="cata-box" onclick="shopAll()">
                 </a><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Untitled-1_6_256x256_18109629-935e-4b4a-b57d-bafd137dfc3d.jpg?v=1652335902"
                     alt="bodycare-img">
                 <P>BODYCARE</P>
             </div>
-            <div class="cata-box">
+            <div class="cata-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/2_10_256x256_8bff7558-6bbe-48bf-ab39-7374e49719bf.jpg?v=1652335951"
                     alt="haircare">
                 <P>HAIRCARE</P>
             </div>
-            <div class="cata-box">
+            <div class="cata-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/3_11_256x256_e7c09569-74b4-4d0c-9051-26ab4e442e4a.jpg?v=1652335973"
                     alt="nutrition">
                 <P>NUTRITION</P>
             </div>
-            <div class="cata-box">
+            <div class="cata-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/1_19_256x256_9865ad78-1e72-4e98-bc3e-4e23cf20f9f1.jpg?v=1652335996"
                     alt="serum">
                 <P>SERUM</P>
             </div>
-            <div class="cata-box">
+            <div class="cata-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Untitled-1_7_256x256_e1449924-9374-406e-b826-3f1c0613bcec.jpg?v=1652336019"
                     alt="Moisturizers">
                 <P>MOISTURIZER</P>
@@ -84,23 +84,23 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" onclick="shopAll()">
                         <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/BBB-Live-Now-Banner-Desktop.gif?v=1655305012"
                             alt="" />
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" onclick="shopAll()">
                         <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/CICA_SPF_Home_Screen_Desktop_Banner.png?v=1655304812"
                             alt="" />
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" onclick="shopAll()">
                         <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/serum_esk.png?v=1655304812"
                             alt="" />
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" onclick="shopAll()">
                         <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ctm_desk_3c37d209-83ed-42ad-a642-315bf880b0e5.png?v=1655304812"
                             alt="" />
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" onclick="shopAll()">
                         <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/2-Vit-C_5.jpg?v=1651751278"
                             alt="" />
                     </div>
@@ -124,7 +124,7 @@
 
         <!-- //////////////////////manual static slider-start -->
         <div id="birthday-sale">
-            <div id="birthday-img">
+            <div id="birthday-img" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/BBB_Up_sale_Sale_Desktop_BannerArtboard_3.jpg?v=1655305234"
                     alt="birthday-img">
             </div>
@@ -140,13 +140,13 @@
         <div id="catageory-2">
             <ul>
                 <div>
-                    <li>SKIN</li>
+                    <li onclick="shopAll()">SKIN</li>
                     <li>|</li>
-                    <li>BODYCARE</li>
+                    <li onclick="shopAll()">BODYCARE</li>
                     <li>|</li>
-                    <li>NUTRITION</li>
-                    <li>|</li>
-                    <li>HAIRCARE</li>
+                    <li onclick="shopAll()">NUTRITION</li>
+                    <li >|</li>
+                    <li onclick="shopAll()">HAIRCARE</li>
                 </div>
             </ul>
         </div>
@@ -154,25 +154,25 @@
 
         <!-- sliding divs-1-start -->
         <div class="gallery">
-            <div class="image-box ">
+            <div class="image-box " onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/PROBIOTICS.jpg?v=1655302709" alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/LIPMASK.jpg?v=1655311025" alt="">
             </div>
 
-            <div class="image-box active">
+            <div class="image-box active" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Artboard1_e423c2c9-3a60-4a5e-9bc0-b0526b7f3c01.jpg?v=1655302612"
                     alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/1-GreenClayListing_1.jpg?v=1649655908"
                     alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/VITCMOIST.jpg?v=1655302755" alt="">
             </div>
 
@@ -189,24 +189,24 @@
 
         <!-- sliding divs-2-start -->
         <div class="gallery">
-            <div class="image-box ">
+            <div class="image-box " onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ezgif.com-gif-maker_ff4dc633-9c9a-40b1-810f-2614147ac68d_540x.gif?v=1615273304"
                     alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/prbox.jpg?v=1655304058" alt="">
             </div>
 
-            <div class="image-box active">
+            <div class="image-box active" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/WATERTONER.jpg?v=1655304005" alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/20_VITC.jpg?v=1655379925" alt="">
             </div>
 
-            <div class="image-box">
+            <div class="image-box" onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CICASUNSCREEN.jpg?v=1655303963"
                     alt="">
             </div>
@@ -233,20 +233,20 @@
         <!-- Iski HEADING, tum kar lena, FONT_FAMILY samaj nhi aye mujhe -->
         <div id="spotlight_aman">
             <div>
-                <div style="width:37% ;"><img
+                <div style="width:37% ;" onclick="shopAll()"><img
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/3-SERUMS.jpg?v=1655304444"
                         alt="image1">
                 </div>
-                <div style="width:62% ;"><img
+                <div style="width:62% ;" onclick="shopAll()"><img
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/diy_serum_2.png?v=1655447676"
                         alt="image2">
                 </div>
             </div>
             <div>
-                <div style="width:62% ;"><img
+                <div style="width:62% ;" onclick="shopAll()"><img
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/moringa_range_2.png?v=1655363016"
                         alt="image2"></div>
-                <div style="width:37% ;"><img
+                <div style="width:37% ;" onclick="shopAll()"><img
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Cica_4_Block-01.png?v=1655304444"
                         alt="image1"></div>
             </div>
@@ -266,15 +266,15 @@
                     <button onclick="prev()">
                         <</button>
                 </div>
-                <div class="card">
+                <div class="card" onclick="shopAll()">
                     <img class="images"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/4E-Ingredient_9f9c8a93-1d51-499f-bb3f-c285b0c6345a.jpg?v=1655367539" />
                 </div>
-                <div class="card">
+                <div class="card" onclick="shopAll()">
                     <img class="images middleCard"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/4F-Ingredient_73eaecaf-da67-4a0a-8884-ab3215f5d1ce.jpg?v=1655367539" />
                 </div>
-                <div class="card">
+                <div class="card" onclick="shopAll()">
                     <img class="images"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/4D-Ingredient_2c86db10-ce47-4ff7-9792-2ebf0192e29e.jpg?v=1655367539" />
                 </div>
@@ -297,15 +297,15 @@
                     <button onclick="prev1()">
                         <</button>
                 </div>
-                <div class="card1">
+                <div class="card1" onclick="shopAll()">
                     <img class="images1"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/serum.jpg?v=1652438356" />
                 </div>
-                <div class="card1">
+                <div class="card1" onclick="shopAll()">
                     <img class="images1 middleCard1"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/glow_3.jpg?v=1652438348" />
                 </div>
-                <div class="card1">
+                <div class="card1" onclick="shopAll()">
                     <img class="images1"
                         src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/moist.jpg?v=1652438356" />
                 </div>
@@ -319,7 +319,7 @@
 
         <!-- SUNIL-BOTTOM-CODE-START -->
         <div id="ikwi">
-            <div id="a1">
+            <div id="a1" onclick="shopAll()">
                 <img style="width: 100%;"
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/1146-356_1_2_1.jpg?v=1655456899" alt="">
             </div>
@@ -327,7 +327,7 @@
                 <p class="SHOP-OUR" style="margin-top:40px ;">LOVE IS GREATER</p>
                 <p class="NEW-ARRIVALS" style="margin-bottom:40px;"><I>WHEN SHARED</I></p>
             </div>
-            <div id="a3">
+            <div id="a3" onclick="shopAll()">
                 <img style="width: 100%;"
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/1_f077b04b-7e98-4c38-94e3-16da38fc85ab.jpg?v=1651149023"
                     alt="">
@@ -349,17 +349,17 @@
         </div>
 
         <div class="clean">
-            <div>
+            <div onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/3-ICONS.png?v=1645770027" alt="">
             </div>
-            <div>
+            <div onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/1-ICONS_b6233563-9f3e-43f6-b158-5205886e2120.png?v=1645779546"
                     alt="">
             </div>
-            <div>
+            <div onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/4-ICONS.png?v=1645770027" alt="">
             </div>
-            <div>
+            <div onclick="shopAll()">
                 <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/2-ICONS.png?v=1645770027" alt="">
             </div>
         </div>
@@ -371,7 +371,7 @@
         <div class="slideshow-container">
 
             <div class="mySlides fade">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ezgif.com-gif-maker_ff4dc633-9c9a-40b1-810f-2614147ac68d_720x.gif?v=1615273304"
+                <img  onclick="shopAll()"src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ezgif.com-gif-maker_ff4dc633-9c9a-40b1-810f-2614147ac68d_720x.gif?v=1615273304"
                     style="width:50%">
                 <div
                     style="display: flex;justify-content: center;align-items: center; display: inline-block;width:40%;line-height: 20px;">
@@ -385,7 +385,7 @@
 
             </div>
             <div class="mySlides fade">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Little-things-that-matter-2_720x.jpg?v=1596602464"
+                <img  onclick="shopAll()" src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Little-things-that-matter-2_720x.jpg?v=1596602464"
                     style="width:50%">
                 <div
                     style="display: flex;justify-content: center;align-items: center; display: inline-block;width:40%;line-height: 20px;">
@@ -427,17 +427,17 @@
         <div id="text-divs-nikhil">
             <div class="text-nikhil">
                 <p>"Latest and greatest natural products for safe, non-toxic skincare."</p>
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/elle-magazine-vector-logo-3_9501c881-18bc-4482-a41a-bae5979fd0b9_180x.png?v=1596894078"
+                <img onclick="shopAll()" src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/elle-magazine-vector-logo-3_9501c881-18bc-4482-a41a-bae5979fd0b9_180x.png?v=1596894078"
                     alt="bazzar-img">
             </div>
             <div class="text-nikhil">
                 <p>"Dot & Key are hoping to spotlight all the body parts you forget to look after."</p>
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Vogue-3-min_180x.png?v=1600165794"
+                <img  onclick="shopAll()"src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Vogue-3-min_180x.png?v=1600165794"
                     alt="vogue-img">
             </div>
             <div class="text-nikhil">
                 <p>"Even a 10 step routine can hvae blind spots. Dot & Key fills in those gaps</p>
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/elle-magazine-vector-logo-2_8a4b49eb-9d7c-4864-954a-fe48fb05a208_180x.png?v=1596894127"
+                <img  onclick="shopAll()"src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/elle-magazine-vector-logo-2_8a4b49eb-9d7c-4864-954a-fe48fb05a208_180x.png?v=1596894127"
                     alt="elle">
             </div>
         </div>
@@ -446,13 +446,13 @@
 
         <!-- static-sliding-divs-starts -->
         <div class="container-manual-div-nikhil">
-            <div class="manual-cards-nikhil"><img
+            <div  onclick="shopAll()"class="manual-cards-nikhil"><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/AHASleepMask1.jpg?v=1635159675"
                     alt="img1"></div>
-            <div class="manual-cards-nikhil"><img
+            <div onclick="shopAll()" class="manual-cards-nikhil"><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Untitled-1_2.png?v=1634903414"
                     alt="img2"></div>
-            <div class="manual-cards-nikhil"><img
+            <div onclick="shopAll()" class="manual-cards-nikhil"><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Artboard1_2.jpg?v=1635157945"
                     alt="img3"></div>
         </div>
@@ -465,7 +465,7 @@
         <!-- aman-bottom-part -->
         <div id="journal_aman_hero">
             <div>
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/image_64_1_7f2ff662-3a45-45a1-9f0c-952252786d05.png?v=1634885869"
+                <img onclick="shopAll()" src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/image_64_1_7f2ff662-3a45-45a1-9f0c-952252786d05.png?v=1634885869"
                     alt="heroImage" />
             </div>
             <div>
@@ -659,7 +659,7 @@
                         <li>Earthcare</li>
                     </a>
                 </ul>
-                <a href="#">
+                <a href="signin.html">
                     <li>PROFILE</li>
                     <i id="five" class="fa-solid fa-plus"></i>
                 </a>
@@ -670,11 +670,11 @@
                     <a href="#">
                         <li>Whishlist</li>
                     </a>
-                    <a href="#">
+                    <a href="location.html">
                         <li>Track Order</li>
                     </a>
                 </ul>
-                <a href="#">
+                <a href="signin.html">
                     <li>LOG IN</li>
                 </a>
             </ul>
