--- a/signup.html
+++ b/signup.html
@@ -95,7 +95,7 @@
               <li>Age Defense</li>
             </a>
           </ul>
-          <a href="#">
+          <a href="shopAll.html">
             <li>SHOP ALL PRODUCTS</li>
             <i id="three" class="fa-solid fa-plus"></i>
           </a>
