home page updated

--- a/index.html
+++ b/index.html
@@ -155,25 +155,25 @@
         <!-- sliding divs-1-start -->
         <div class="gallery">
             <div class="image-box " onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/PROBIOTICS.jpg?v=1655302709" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CopyofVITCMOIST.jpg?v=1666071489" alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/LIPMASK.jpg?v=1655311025" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyof72hr.jpg?v=1666071455" alt="">
             </div>
 
             <div class="image-box active" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Artboard1_e423c2c9-3a60-4a5e-9bc0-b0526b7f3c01.jpg?v=1655302612"
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyofretinol.jpg?v=1666071475"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/1-GreenClayListing_1.jpg?v=1649655908"
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/cicanightgel_6.jpg?v=1666075182"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/VITCMOIST.jpg?v=1655302755" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyoflipplumping.jpg?v=1666071320" alt="">
             </div>
 
 
@@ -190,24 +190,24 @@
         <!-- sliding divs-2-start -->
         <div class="gallery">
             <div class="image-box " onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ezgif.com-gif-maker_ff4dc633-9c9a-40b1-810f-2614147ac68d_540x.gif?v=1615273304"
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyofmoringashampoo.jpg?v=1666071949"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/prbox.jpg?v=1655304058" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CopyofPEAPEPTIDESERUM.jpg?v=1666071968" alt="">
             </div>
 
             <div class="image-box active" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/WATERTONER.jpg?v=1655304005" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/ezgif.com-gif-maker_ff4dc633-9c9a-40b1-810f-2614147ac68d_720x.gif?v=1615273304" alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/20_VITC.jpg?v=1655379925" alt="">
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/moringaMASK_3.jpg?v=1666075229" alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CICASUNSCREEN.jpg?v=1655303963"
+                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/oliveMASK_1.jpg?v=1666075235"
                     alt="">
             </div>
 
@@ -441,11 +441,11 @@
                     alt="elle">
             </div>
         </div>
-        <p class="SHOP-OUR" style="margin-top:50px;">CUSTOMER</p>
-        <p class="NEW-ARRIVALS" style="margin-bottom: 50px;">REVIEWS</p>
+        <!-- <p class="SHOP-OUR" style="margin-top:50px;">CUSTOMER</p>
+        <p class="NEW-ARRIVALS" style="margin-bottom: 50px;">REVIEWS</p> -->
 
         <!-- static-sliding-divs-starts -->
-        <div class="container-manual-div-nikhil">
+        <!-- <div class="container-manual-div-nikhil">
             <div  onclick="shopAll()"class="manual-cards-nikhil"><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/AHASleepMask1.jpg?v=1635159675"
                     alt="img1"></div>
@@ -455,7 +455,7 @@
             <div onclick="shopAll()" class="manual-cards-nikhil"><img
                     src="https://cdn.shopify.com/s/files/1/0361/8553/8692/files/Artboard1_2.jpg?v=1635157945"
                     alt="img3"></div>
-        </div>
+        </div> -->
         <!-- static-sliding-divs-ends -->
 
         <p class="SHOP-OUR" style="margin-top:80px;">OUR</p>
@@ -711,4 +711,3 @@
 </script>
 
 
-//done
