--- a/index.html
+++ b/index.html
@@ -157,25 +157,25 @@
         <!-- sliding divs-1-start -->
         <div class="gallery">
             <div class="image-box " onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CopyofVITCMOIST.jpg?v=1666071489" alt="">
+                <img src="images/img1.webp" alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyof72hr.jpg?v=1666071455" alt="">
+                <img src="images/img2.webp" alt="">
             </div>
 
             <div class="image-box active" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyofretinol.jpg?v=1666071475"
+                <img src="images/img4.webp"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/cicanightgel_6.jpg?v=1666075182"
+                <img src="images/img3.webp"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyoflipplumping.jpg?v=1666071320" alt="">
+                <img src="images/img5.webp" alt="">
             </div>
 
 
@@ -192,12 +192,12 @@
         <!-- sliding divs-2-start -->
         <div class="gallery">
             <div class="image-box " onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/Copyofmoringashampoo.jpg?v=1666071949"
+                <img src="images/newImg1.webp"
                     alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/CopyofPEAPEPTIDESERUM.jpg?v=1666071968" alt="">
+                <img src="images/newImg2.webp" alt="">
             </div>
 
             <div class="image-box active" onclick="shopAll()">
@@ -205,11 +205,11 @@
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/moringaMASK_3.jpg?v=1666075229" alt="">
+                <img src="images/newImg3.webp" alt="">
             </div>
 
             <div class="image-box" onclick="shopAll()">
-                <img src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/oliveMASK_1.jpg?v=1666075235"
+                <img src="images/newImg4.webp"
                     alt="">
             </div>
 
