--- a/information.html
+++ b/information.html
@@ -663,7 +663,7 @@
           <div class="buyProduct">
             <div>
               <img
-                src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/acne_2_360x.jpg?v=1647255939"
+                src="images/topImg1.webp"
                 alt="Product1"
               />
             </div>
@@ -679,7 +679,7 @@
           <div class="buyProduct">
             <div>
               <img
-                src="https://cdn.shopify.com/s/files/1/0361/8553/8692/products/20_VITC_360x.jpg?v=1655303889"
+                src="images/topImg2.webp"
                 alt="Product1"
               />
             </div>
